--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "styled-components": "^6.1.8"
   },
