made changes in .gitignore file

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-PORT=8000
-MONGO_URL="mongodb+srv://gopala142002:gopala142002@atlascluster.sfgtotx.mongodb.net/"
+PORT=8000;
+MONGO_URL="mongodb+srv://gopala142002:gopala142002@atlascluster.sfgtotx.mongodb.net/";
