--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build":"npm i"
   },
   "author": "Gopala Patel",
   "license": "ISC",
