--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
 
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "build":"npm i"
   },
   "author": "Gopala Patel",
